# users-api

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 25addbe3a6ee_create_user_table.py  3f7e417efe05_create_users_table.py  676e65d34d96_create_user_table.py  e6f4d46cd6de_create_user_table.py
config/: api.env  db.env
docker/: Dockerfile  docker-compose.yml
scripts/: configure.sh  pre_commit.sh  start_develop.sh  test.sh
src/users_api/: app.py  settings.py
src/users_api/api/: deps.py  security.py
src/users_api/api/v1/: routers.py
src/users_api/api/v1/endpoints/: auth.py  users.py
src/users_api/cli/: manage.py
src/users_api/crud/: base.py  crud_user.py
src/users_api/db/: base.py  base_class.py  session.py
src/users_api/models/: user.py
src/users_api/schemas/: __init__.py  api.py  token.py  user.py
src/users_crud/: app.py  settings.py  version.py
src/users_crud/api/: deps.py  security.py
src/users_crud/api/v1/: routers.py
src/users_crud/api/v1/endpoints/: __init__.py  auth.py  users.py
src/users_crud/cli/: manage.py
src/users_crud/crud/: __init__.py  base.py  crud_user.py
src/users_crud/db/: base.py  session.py
src/users_crud/models/: user.py
src/users_crud/schemas/: __init__.py  api.py  base.py  token.py  user.py
tests/: conftest.py  test_base.py  utils.py
tests/api/: test_security.py
tests/api/v1/endpoints/: test_endpoint_users.py  test_endpoints_auth.py  test_endpoints_users.py
tests/crud/: test_crud_user.py
tests/models/: test_models_user.py
