[tool.poetry]
name = "users-crud"
version = "0.1.0"
description = "Users CRUD using fastAPI"
authors = ["Damian Bourdin <damian.bourdin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
fastapi-utils = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = 'users_crud.cli.manage:app'

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["users_crud"]
known_third_party = ["alembic"]
default_section="THIRDPARTY"
