[tool.poetry]
name = "users-api"
version = "0.1.0"
description = "Users API built with FastAPI and PostgreSQL"
authors = ["Damian Bourdin <damian.bourdin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.35"
bcrypt = "^3.2.0"
passlib = "^1.7.4"
fastapi-utils = "^0.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"
typer = "^0.4.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
alembic = "^1.7.7"
pytest-cov = "^3.0.0"
requests = "^2.27.1"
SQLAlchemy-Utils = "^0.38.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manage = 'users_api.cli.manage:app'

[tool.isort]
profile = "black"
multi_line_output = 3
known_first_party = ["users_api"]
known_third_party = ["alembic"]
default_section="THIRDPARTY"
